; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/ruptime/extr_ruptime.c_ucmp.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/ruptime/extr_ruptime.c_ucmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@rflg = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @ucmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ucmp(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call %struct.TYPE_3__* @HS(i8* %6)
  %8 = call i64 @ISDOWN(%struct.TYPE_3__* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %21

10:                                               ; preds = %2
  %11 = load i8*, i8** %5, align 8
  %12 = call %struct.TYPE_3__* @HS(i8* %11)
  %13 = call i64 @ISDOWN(%struct.TYPE_3__* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %10
  %16 = load i8*, i8** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @tcmp(i8* %16, i8* %17)
  store i32 %18, i32* %3, align 4
  br label %41

19:                                               ; preds = %10
  %20 = load i32, i32* @rflg, align 4
  store i32 %20, i32* %3, align 4
  br label %41

21:                                               ; preds = %2
  %22 = load i8*, i8** %5, align 8
  %23 = call %struct.TYPE_3__* @HS(i8* %22)
  %24 = call i64 @ISDOWN(%struct.TYPE_3__* %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = load i32, i32* @rflg, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %3, align 4
  br label %41

29:                                               ; preds = %21
  %30 = load i32, i32* @rflg, align 4
  %31 = load i8*, i8** %5, align 8
  %32 = call %struct.TYPE_3__* @HS(i8* %31)
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load i8*, i8** %4, align 8
  %36 = call %struct.TYPE_3__* @HS(i8* %35)
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = sub nsw i32 %34, %38
  %40 = mul nsw i32 %30, %39
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %29, %26, %19, %15
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i64 @ISDOWN(%struct.TYPE_3__*) #1

declare dso_local %struct.TYPE_3__* @HS(i8*) #1

declare dso_local i32 @tcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
